public class AutistaAMA extends LavoratoreAMA {

}
