public class Rifiuto {

	private String descrizione;
	private double pesoStimato;
	private double volumeStimato;
	private String foto;

}
